--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">
-     <img src="{{ site.url }}{{ site.baseurl }}/uteplogo.svg" width="30" height="30" style="margin-right:5px" class="d-inline-block align-top" alt="">
+    、<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">
+    <!--   <img src="{{ site.url }}{{ site.baseurl }}/uteplogo.svg" width="30" height="30" style="margin-right:5px" class="d-inline-block align-top" alt="">  -->
       {{ site.title | escape }}
     </a>
     <button class="toggler navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
