--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -45,7 +45,7 @@ pre{
 {% endif %} -->
 
 {% if entry.commentary %}
-<button class="btn custom-btn btm-sm" onclick="togglecommentary{{entry.key}}()">Featured Commentary</button>
+<button class="btn custom-btn btm-sm" onclick="toggleCommentary{{entry.key}}()">Featured Commentary</button>
 <div id="c{{entry.key}}" style="display: none; background-color:#EBEFF1; border-radius:5px; padding:15px; margin-top:10px; margin-bottom:20px;">
     <pre>{{entry.commentary}}</pre>
 </div>
