--- a/_layouts/bibtemplate.html
+++ b/_layouts/bibtemplate.html
@@ -47,35 +47,39 @@ pre{
 {% if entry.commentary %}
   <button class="btn custom-btn btm-sm" 
           onclick="toggleCommentary{{entry.key}}()" 
-          style="background-color: #d9534f; border-color: #d43f3a; color: white; margin-right: 5px;">Featured Commentary
+          style="background-color: #9e9f9e; border-color: #9e9f9e; color: white; margin-right: 5px;">
+    Featured Commentary
   </button>
   <div id="c{{entry.key}}" style="display: none; background-color:#EBEFF1; border-radius:5px; padding:15px; margin-top:10px; margin-bottom:20px;">
     <pre style="white-space: pre-wrap;">{{entry.commentary}}</pre>
   </div>
-  {% endif %}
+{% endif %}
 
 {% if entry.editorpick %}
-<button class="btn custom-btn btm-sm" onclick="toggleeditorpick{{entry.key}}()" style="background-color: #d9534f; border-color: #d43f3a; color: white;">Editor's Pick
+<button class="btn custom-btn btm-sm" 
+        onclick="toggleeditorpick{{entry.key}}()" 
+        style="background-color: #9e9f9e; border-color: #9e9f9e; color: white; margin-right: 5px;">
+  Editor's Pick
 </button>
 <div id="b{{entry.key}}" style="display: none; background-color:#EBEFF1; border-radius:5px; padding:10px; margin-bottom:20px;">
-    <pre>{{entry.editorpick}}</pre>
+    <pre style="white-space: pre-wrap;">{{entry.editorpick}}</pre>
 </div>
 {% endif %}
 
-
 {% if bibtest %}
 <a href="{{ site.url }}{{ site.baseurl }}/papers/{{ entry.file }}" target="_blank">
-  <button class="btn custom-btn btm-sm" style="background-color: #6c757d; border-color: #6c757d; color: white;">PDF</button>
+  <button class="btn custom-btn btm-sm" style="background-color: #9e9f9e; border-color: #9e9f9e; color: white; margin-right: 5px;">PDF</button>
 </a>
 {% endif %}
+
 {% if entry.doi %}
   {% if entry.doi contains 'http' %}
     <a href="{{ entry.doi }}" target="_blank">
-      <button class="btn custom-btn btm-sm" style="background-color: #6c757d; border-color: #6c757d; color: white;">DOI</button>
+      <button class="btn custom-btn btm-sm" style="background-color: #9e9f9e; border-color: #9e9f9e; color: white;">DOI</button>
     </a>
   {% else %}
     <a href="https://doi.org/{{ entry.doi }}" target="_blank">
-      <button class="btn custom-btn btm-sm" style="background-color: #6c757d; border-color: #6c757d; color: white;">DOI</button>
+      <button class="btn custom-btn btm-sm" style="background-color: #9e9f9e; border-color: #9e9f9e; color: white;">DOI</button>
     </a>
   {% endif %}
 {% endif %}
